--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -106,10 +106,10 @@
                                     {% for category in category_list %}
                                     <li>
                                         <div class="collapseHeader" id="{{category.pk}}" data-toggle="collapse"
-                                             data-target="#{{forloop.counter0}}" aria-expanded="true"
-                                             aria-controls="{{forloop.counter0}}">{{category}} <i class="la la-plus-circle"></i>
+                                             data-target="#target_{{forloop.counter0}}" aria-expanded="true"
+                                             aria-controls="target_{{forloop.counter0}}">{{category}} <i class="la la-plus-circle"></i>
                                         </div>
-                                        <div id="{{forloop.counter0}}" class="collapse collapseBody" aria-labelledby="{{category.pk}}"
+                                        <div id="target_{{forloop.counter0}}" class="collapse collapseBody" aria-labelledby="{{category.pk}}"
                                              data-parent="#accordion">
                                             <ul class="guideline-list">
                                                 {% for material in category.materials.all %}
