--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -1,6 +1,4 @@
 {% extends '_base.html' %}
-{% load render_bundle from webpack_loader %}
-{% load get_files from webpack_loader %}
 {% load static %}
 
 {% block extra_css %}
@@ -101,6 +99,7 @@
                              <a href="{% url 'core:material_create' project.pk %}" title="" class="btn btn-sm btn-xs btn-primary"><i class="la la-plus"></i>New Guidelines</a>
                         </div>
                         <div class="widget-body">
+
                             <div class="guidelines-wrap">
                                 <ul id="accordion" class="collapseableWrap">
                                     {% for category in category_list %}
@@ -120,6 +119,8 @@
                                                         <a href="{% url 'core:material_update' material.pk %}" data-toggle="tooltip" data-placement="top"
                                                            title="Edit"><i class="la la-edit"></i></a>
                                                     </div>
+                                                    {% empty %}
+                                                    <small>No Guidelines Found.</small>
                                                 </li>
                                                 {% endfor %}
                                             </ul>
@@ -136,7 +137,7 @@
                     <div class="widget-info margin-top-large">
                         <div class="widget-head">
                             <h4><a href="#" title="">Recent Updates</a></h4>
-                            <a href="#" title="" class="btn btn-sm btn-xs btn-primary" target="_blank"><i
+                            <a href="#" title="" class="btn btn-sm btn-xs btn-primary"><i
                                     class="la la-caret-right"></i> View All</a>
                         </div>
                         <div class="widget-body">
@@ -186,18 +187,10 @@
 {% endblock content %}
 
 {% block extra_script %}
-{% render_bundle 'asset_stylesheets' 'css'  %}
-{% render_bundle 'main' 'js'  %}
-<script src="{% static 'assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js'%}"></script>
-<!--&lt;!&ndash;<script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
-<!--<script>window.jQuery || document.write('<script src="{% static 'assets/js/vendor/jquery-3.2.1.min.js' %}"><\/script>')</script>-->
 <script>
-    window.jQuery || document.write('<script src="{% static 'assets/js/vendor/jquery-1.11.2.min.js' %}"><\/script>')
+    window.jQuery || document.write('<script src="{% static 'assets/js/vendor/jquery-1.11.2.min.js' %}"></script>')
 </script>
-<script src="{% static 'assets/js/vendor/popper.min.js' %}"></script>
-<script src="{% static 'assets/js/vendor/bootstrap.min.js' %}"></script>
 <script src="{% static 'assets/js/vendor/jquery.nicescroll.min.js' %}"></script>
-<script src="{% static 'assets/js/plugins.js' %}"></script>
 <script>
         	$(document).ready(function(){
                 //Height Fix
@@ -257,8 +250,16 @@
                 })
 
                 $(".collapseHeader").click(function(){
-                   $(this).find('i').toggleClass('la-minus-circle');
                 });
+                function toggleIcon(e) {
+                    $(e.target)
+                        .prev('.collapseHeader')
+                        .find("i")
+                        .toggleClass('la-minus-circle');
+                }
+                $('#accordion').on('hidden.bs.collapse', toggleIcon);
+                $('#accordion').on('shown.bs.collapse', toggleIcon);
+
         	});
 
 
