--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -61,7 +61,7 @@
                             <div class="widget-info margin-top-large">
                                 <div class="widget-head">
                                     <h4><a href="#" title="">Manage User</a></h4>
-                                    <h4><a href="#" title="">Manage User</a></h4> <a href="{% url 'core:user_list'%}" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                    <a href="{% url 'core:user_list'%}" title="" class="btn btn-sm btn-xs btn-primary"><i
                                         class="la la-caret-right"></i> More </a>
                                     <a href="{% url 'core:user_create'%}" title="" class="btn btn-sm btn-xs btn-primary"><i
                                         class="la la-caret-right"></i> Create User</a>
