UserProfileUpdateView edit email

--- a/survey/core/templates/core/user_profile.html
+++ b/survey/core/templates/core/user_profile.html
@@ -29,28 +29,28 @@
                         <div class="widget-body">
                             <table class="table">
                                 <thead>
-                                <tr>
-                                    <th scope="col">User Name</th>
-                                    <th scope="col">{{ user.username }}</th>
-                                </tr>
+                                    <tr>
+                                        <th scope="col">User Name</th>
+                                        <th scope="col">{{ user.username }}</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
-                                    <td>first_name</td>
-                                    <td>{{ user.first_name }}</td>
-                                </tr>
-                                <tr>
-                                    <td>last_name</td>
-                                    <td>{{ user.last_name }}</td>
-                                </tr>
-                                <tr>
-                                    <td> email</td>
-                                    <td>{{ user.email }}</td>
-                                </tr>
-                                <tr>
-                                    <td> date_joined</td>
-                                    <td>{{ user.date_joined }}</td>
-                                </tr>
+                                    <tr>
+                                        <td>First_Name</td>
+                                        <td>{{ user.first_name }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Last_Name</td>
+                                        <td>{{ user.last_name }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td> Email</td>
+                                        <td>{{ user.email }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td> Date_Joined</td>
+                                        <td>{{ user.date_joined }}</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
