Common users in project dashboard

--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -72,7 +72,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <a href="#" title="" class="stat-item margin-top">
-                                        <span class="stat-count">350</span>
+                                        <span class="stat-count">{{project.total_common_users}}</span>
                                         <span class="stat-label">Common Users</span>
                                         <i class="la la-users"></i>
                                     </a>
