--- a/survey/core/templates/core/site_create.html
+++ b/survey/core/templates/core/site_create.html
@@ -39,5 +39,6 @@
                             </div>
                         </div>
                     </div>
+       </div>
 
 {% endblock content %}
