UI Nameing work

--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -18,7 +18,7 @@
 
                 <div class="module-school-list">
                 <p><a href="{% url 'core:project_create'%}" title="" class="btn btn-sm btn-xs btn-primary  btn-block"><i
-                                        class="la la-caret-right"></i> Add Project</a></p>
+                                        class="la la-plus"></i> New Project</a></p>
 
                     <div class="school-wrap">
 
