--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -6,12 +6,15 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
-                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' object.project.pk %}">{{ object.project }} Dashboard</a></li>
+                    <li class="breadcrumb-item"><a
+                            href="{% url 'core:project_dashboard' object.project.pk %}">{{ object.project }}
+                        Dashboard</a></li>
                     <li class="breadcrumb-item active" aria-current="page">{{ object }} Detail</li>
-                    {% else %}
-                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
+                {% else %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a>
+                    </li>
                     <li class="breadcrumb-item active" aria-current="page">{{ object }} Detail</li>
-                    {% endif %}
+                {% endif %}
                 </ol>
             </nav>
         </div>
@@ -29,7 +32,8 @@
                                     <i class="la la-file-text"></i> Data
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="{% url 'core:document_list' site.pk %}"><i class="la la-reply"></i> Document</a>
+                                    <a class="dropdown-item" href="{% url 'core:document_list' site.pk %}"><i
+                                            class="la la-reply"></i> Document</a>
                                     <a class="dropdown-item" href="#"><i class="la la-reply"></i> View Responses</a>
                                     <a class="dropdown-item" href="#"><i class="la la-list"></i> Generate Report</a>
                                 </div>
@@ -73,7 +77,10 @@
                                 {% endif %}
                                 {% if object.get_latitude or object.get_longitude %}
                                     <li>
-                                        <strong>Location:<br><small>Latitude: {{ object.get_latitude }}<br> Longitude: {{object.get_longitude }}</bold></small></strong>
+                                        <strong>Location:<br>
+                                            <small>Latitude: {{ object.get_latitude }}<br>
+                                                Longitude: {{ object.get_longitude }}</bold></small>
+                                        </strong>
                                         <br>
 
                                     </li>
@@ -146,12 +153,15 @@
                             </div>
                             <div class="widget-body">
                                 <ul class="submission-list">
-                                    {% for material in site_materials %}
+                                    {% for site_material in site_materials %}
                                         <li>
                                             <img src="assets/img/img-school.png" alt="">
-                                            <a title="View guideline detail"
-                                               href="{% url 'core:site_material_detail' material.pk %}"><strong>{{ material }}</strong></a>
-                                            <br>
+                                            {% for material in  site_material.materials.all %}
+                                                <a title="View guideline detail"
+                                                   href="{% url 'core:material_detail' material.pk %}">{{ material }}</a>
+                                                <br>
+                                            {% endfor %}
+
 
                                         </li>
                                     {% empty %}
