--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -157,8 +157,7 @@
                                         <li>
                                             <img src="assets/img/img-school.png" alt="">
                                             {% for material in  site_material.materials.all %}
-                                                <a title="View guideline detail"
-                                                   href="{% url 'core:material_detail' material.pk %}">{{ material }}</a>
+                                               {{ material }}
                                                 <br>
                                             {% endfor %}
 
