--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -197,8 +197,7 @@
 
 {% block extra_script %}
 <script>
-    window.jQuery || document.write('<script src="{% static 'assets/js/vendor/jquery-1.11.2.min.js' %}">
-</script>')
+    window.jQuery || document.write('<script src="{% static 'assets/js/vendor/jquery-1.11.2.min.js' %}"><\/script>')
 </script>
 <script src="{% static 'assets/js/vendor/jquery.nicescroll.min.js' %}"></script>
 <script>
