--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -188,10 +188,28 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="widget-info margin-top-large">
+                        <div class="widget-head">
+                            <h4><a href="#" title="">Project Manager</a></h4>
+                            <a href="{% url 'userrole:project_user_create' project.pk %}"><i
+                                class="la la-user"></i>Add Manager</a> 
+                            </div>
+                            <div class="widget-body">
+                                {% for user in users %}
+                                    {{ forloop.counter }}. {{ user }}<br>
+                                {% endfor %}
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+
 
 {% endblock content %}
 
