--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -260,16 +260,11 @@
                                         <div class="photo-holder photo-item margin-top">
                                             <img src="{{ MEDIA_URL }}{{ picture }}" img-title="Hello" alt="">
                                         </div>
-                                    </div>{% endfor %}
-                                    <div class="col-md-4">
-                                        <div class="photo-holder margin-top">
-                                            <a href="{% url 'core:site_detail' site.pk %}" title=""
-                                               class="count-holder">
-                                                <span class="align-middle">100+</span>
-                                            </a>
-                                            <img src="{{ MEDIA_URL }}{{ site.photo }}" img-title="Image Title" alt="">
-                                        </div>
+
                                     </div>
+                                    {% empty %} <p>No Pictures Found.</p>
+                                    {% endfor %}
+
                                 </div>
                             </div>
                         </div>
