--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -157,7 +157,7 @@
                                                         <strong>{{ step.name }}</strong>
                                                         <span class="check-info">
                                                         <i class="la la-user"
-                                                           aria-hidden="true"></i>{{ step.site.site_roles.first.user }}
+                                                           aria-hidden="true"></i>{{ step.created_by.username }}
                                                     </span>
                                                     </li>
                                                 </ul>
@@ -176,7 +176,7 @@
                                                         <strong>{{ step.name }}</strong>
                                                         <span class="check-info">
                                                         <i class="la la-user"
-                                                           aria-hidden="true"></i>{{ step.site.site_roles.first.user }}
+                                                           aria-hidden="true"></i>{{ step.created_by.username }}
                                                     </span>
                                                     </li>
                                                 </ul>
