site-detail-js tab sorted

--- a/survey/core/templates/core/site_steps.html
+++ b/survey/core/templates/core/site_steps.html
@@ -17,5 +17,5 @@
     template_data.project={{project}};
 
 </script>
-{% render_bundle 'survey' 'js' %}
+{% render_bundle 'steps' 'js' %}
 {% endblock extra_script %}
