--- a/survey/core/templates/core/site_detail_js.html
+++ b/survey/core/templates/core/site_detail_js.html
@@ -12,7 +12,9 @@
 
 {% block extra_script %}
 <script>
-    site_id={{site_id}};
+    template_data.site_id={{site_id}};
+    template_data.site={{site|safe}};
+
 
 
     
