--- a/survey/core/templates/core/site_steps.html
+++ b/survey/core/templates/core/site_steps.html
@@ -15,7 +15,7 @@
     template_data.is_project={{is_project}};
     template_data.pk={{pk}};
     template_data.project={{project}};
-
+    template_data.dashboard_url="{{dashboard_url}}";
 </script>
 {% render_bundle 'steps' 'js' %}
 {% endblock extra_script %}
