api for site step update

--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -200,7 +200,7 @@
                                         <li>
                                             <img src="{{ MEDIA_URL }}{{ report.photo }}" alt="">
                                             <a title="View submission detail"
-                                               href="#"><strong>{{ report.checklist }}</strong></a>
+                                               href="#"><strong>{{ report.checklist.step_checklist }}</strong></a>
                                             <br>
                                             <a href="#" title="View details of user">
                                                 <small><i class="la la-user"></i>{{ report.user }}</small>
