--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -29,7 +29,9 @@
                                 <a href="{% url 'core:project_dashboard' project.pk %}" title="">
                                     <img src="{{ MEDIA_URL }}{{ project.logo }}" class="project-logo" alt="">
                                     <h6>{{ project }}</h6>
-                                    <span>{{ project.address }}</span>
+                                    {% if project.address %}
+                                        <span>{{ project.address }}</span>
+                                    {% endif %}
                                 </a>
                             </li>{% endfor %}
 
