--- a/survey/core/templates/core/report_detail.html
+++ b/survey/core/templates/core/report_detail.html
@@ -17,7 +17,7 @@
         <ul class="submission-list">
             <li>
                 <img src="assets/img/img-school.png" alt="">
-                <strong>{{ object.checklist }}</strong>
+                <strong>{{ object.checklist.step_checklist }}</strong>
                 <br>
                 {% if object.user %}
                     <a href="#" title="View details of user">
