--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -191,7 +191,7 @@
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
                                 <h4><a href="#" title="">Reports</a></h4>
-                                <a href="#" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                <a href="{% url 'core:report_list' site.pk %}" title="" class="btn btn-sm btn-xs btn-primary"><i
                                         class="la la-caret-right"></i> More</a>
                             </div>
                             <div class="widget-body" data-mh="sd-widget">
@@ -200,7 +200,7 @@
                                         <li>
                                             <img src="{{ MEDIA_URL }}{{ report.photo }}" alt="">
                                             <a title="View submission detail"
-                                               href="#"><strong>{{ report.checklist.step_checklist }}</strong></a>
+                                               href="{% url 'core:report_detail' report.pk %}"><strong>{{ report.checklist.step_checklist }}</strong></a>
                                             <br>
                                             <a href="#" title="View details of user">
                                                 <small><i class="la la-user"></i>{{ report.user }}</small>
