--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -155,14 +155,15 @@
                                 <div class="update-item">
                                     <h6>Today</h6>
                                     <ul class="update-list">
-                                        {% for activities in recent_activities_report %}
+                                        {% for report in recent_activities_report %}
                                             <li>
                                                 <img src="assets/img/Patanjali.jpg" alt="">
-                                                <a href="#" title=""><strong>{{ activities.user }}</strong></a> submitted a
-                                                response for general form <a href="{% url 'core:report_detail' activities.pk %}" title=""><strong>{{ activities.checklist.step_checklist }} Report</strong></a> in site <a href="#" title=""><strong>
-                                                 {{ activities.checklist.step.site }}
+                                                <a href="#" title=""><strong>{{ report.user }}</strong></a> submitted a
+                                                response for general form <a href="{% url 'core:report_detail' report.pk %}" title=""><strong>{{ report.checklist.step_checklist }} Report</strong></a> in site <a href="#" title=""><strong>
+                                                 {{ report.checklist.step.site }}
                                             </strong></a>.
-                                                <span class="time">{{ activities.date }}</span>
+                                                <span class="time"><i class="la la-clock-o"
+                                                                                       aria-hidden="true"></i>{{ report.date }}</span>
                                             </li>
                                         {% endfor %}
 
