--- a/survey/core/templates/core/recent_updates.html
+++ b/survey/core/templates/core/recent_updates.html
@@ -34,7 +34,8 @@
                     {% if report.comment %}
                         <small class="site_icon_float" style="">Comment: {{ report.comment }}</small><br>{% endif %}
                     {% if report.date %}
-                        <small class="site_icon_float" style="">{{ report.date }}</small><br>{% endif %}
+                        <small class="site_icon_float" style=""><i class="la la-clock-o"
+                                                                                       aria-hidden="true"></i>{{ report.date }}</small><br>{% endif %}
 
 
                 </li>
