--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -3,7 +3,15 @@
 {% load render_bundle from webpack_loader %}
 {% load get_files from webpack_loader %}
 
+{% block extra_css %}
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+   crossorigin=""/>
+     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+   integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+   crossorigin=""></script>
+{% endblock extra_css %}
 {% block content %}
 <div class="row no-gutters">
     <div class="col-md-12">
@@ -192,7 +200,7 @@
                         <div class="widget-head">
                             <h4><a href="#" title="">Project Manager</a></h4>
                             <a href="{% url 'userrole:project_user_create' project.pk %}"><i
-                                class="la la-user"></i>Add Manager</a> 
+                                class="la la-user"></i>Add Manager</a>
                             </div>
                             <div class="widget-body">
                                 {% for user in users %}
@@ -216,38 +224,35 @@
     {% render_bundle 'project' 'js' %}
     <script>
             function myMap() {
-            var locations = [
-              ['Bondi Beach', 14.5995, 120.9842, 4],
-              ['Coogee Beach', 14.5695, 120.9942, 5],
-              ['Cronulla Beach',14.5795, 120.9742, 3],
-              ['Manly Beach', 14.5895, 120.9642, 2],
-              ['Maroubra Beach', 14.5595, 120.9840, 1]
-            ];
+                var locations = JSON.parse("{{ locations|escapejs }}");
+                var address = JSON.parse("{{ site_address|escapejs }}");
+                var latlong = JSON.parse("{{ site_latlong|escapejs }}");
 
-            var map = new google.maps.Map(document.getElementById('school-map'), {
-              zoom: 12,
-              center: new google.maps.LatLng(14.5995, 120.9842),
-              mapTypeId: google.maps.MapTypeId.ROADMAP
-            });
+                var map = new google.maps.Map(document.getElementById('school-map'), {
+                    zoom: 11,
+                    center: new google.maps.LatLng(14.5995, 120.9842),
+                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                });
 
-            var infowindow = new google.maps.InfoWindow();
+                console.log("hello from map");
 
-            var marker, i;
+                var infowindow = new google.maps.InfoWindow();
+                var marker, i;
+                map.data.addGeoJson(locations);
 
-            for (i = 0; i < locations.length; i++) {
-              marker = new google.maps.Marker({
-                position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-                map: map
-              });
-
-              google.maps.event.addListener(marker, 'click', (function(marker, i) {
-                return function() {
-                  infowindow.setContent(locations[i][0]);
-                  infowindow.open(map, marker);
+                for (i = 0; i < address.length; i++) {
+                    marker = new google.maps.Marker({
+                    position: new google.maps.LatLng(latlong[i][1], latlong[i][0]),
+                    map: map
+                  });
+                  google.maps.event.addListener(marker, 'click', (function(marker, i) {
+                    return function() {
+                      infowindow.setContent(address[i]);
+                      infowindow.open(map);
+                    }
+                  })(marker, i));
                 }
-              })(marker, i));
             }
-        }
         </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADDQuj6F2x8p1dEa_oSyinWepcGHrVxvU&callback=myMap"></script>
 
